--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>CSS Diner</title>
+        <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/style.css">
         <link rel="icon" href="img/favicon.png" type="image/x-icon">
     </head>
