--- a/lesson8/index.html
+++ b/lesson8/index.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>I love Design</title>
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="" />
-	<link rel="icon" href="img/favicon.png"/>
-	<link rel="stylesheet" href="css/normalize.css" />
-	<link rel="stylesheet" href="css/style.css" />
+    <meta charset="UTF-8">
+    <title>I love Design</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="" />
+    <link rel="icon" href="img/favicon.png" />
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/style.css" />
 
 </head>
 <body>
-    <header>
-        <div class="logo">
-            <img src="img/logo.png" alt="logo"/>
-        </div>
-        <h1>i love design</h1>
-        <p>I'm glad that you visited my site where he can get to <br>know me and my work.</p>
-        <div class="icon">
-            <a href="#one"><img src="img/down-icon.png" alt="down"/></a>
-        </div>
-    </header>
-    
+<header>
+    <div class="logo">
+        <img src="img/logo.png" alt="logo"/>
+    </div>
+    <h1>i love design</h1>
+    <p>I'm glad that you visited my site where he can get to know me and my work.</p>
+    <div class="icon">
+        <a href="#one"><img src="img/down-icon.png" alt="down"/></a>
+    </div>
+</header>
     <article>
         <p><a name="one"></a>My name is Vlad Musienko, I'm a web designer. I love to draw and all that is connected with the design. In this area a long time ago and during this time I managed to create several successful projects used by people all over the world.</p>
         <p>I love the simplicity in the design of web sites. As I see it,people, it's like my work. Naturally do not want to rest on our laurels and will continue further studies to improve soybean skills, creating new interesting creative projects.</p>
