--- a/lesson16/index.html
+++ b/lesson16/index.html
@@ -2,30 +2,79 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>paymentform</title>
+    <title>Image Grid</title>
     <link rel="icon" href="img/favicon.png" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
 
 </head>
 <body>
-<div class="form">
-    <h1><i class="fas fa-key"></i>Create your free account</h1>
-    <p>Come and join our cool and amazing community, fill in your details
-        to get started. Already have an account? <a href="#">Log in.</a></p>
-    <form>
-        <div class="name">
-            <input class="fname" type="text" name="username" placeholder="First name">
-            <input class="lname" type="text" name="username" placeholder="Last name">
+<div class="ba-container">
+    <h1>Image Grid</h1>
+    <div class="ba-row clearfix">
+        <div class="ba-width-1-2">
+            <img src="http://via.placeholder.com/600x150/AFDFBF/617767">
         </div>
-        <div class="mail">
-            <input type="email" name="email" placeholder="Email address">
-            <input type="password" name="password" placeholder="Password">
-            <input type="submit" name="submit" value="Sign up for free">
+        <div class="ba-width-1-2">
+            <img src="http://via.placeholder.com/600x150/68C5B8/617767">
         </div>
-    </form>
+    </div>
+
+    <div class="ba-row clearfix">
+        <div class="ba-width-1-2">
+            <img src="http://via.placeholder.com/600x320/FA6889/FFFBF9">
+        </div>
+        <div class="ba-width-1-2">
+            <div class="ba-row clearfix">
+                <div class="ba-width-1-3">
+                   <img src="http://via.placeholder.com/200x165/8996EF/FFFBF9">
+                </div>
+                <div class="ba-width-1-3">
+                    <img src="http://via.placeholder.com/200x165/8996EF/FFFBF9">
+                </div>
+                <div class="ba-width-1-3">
+                    <img src="http://via.placeholder.com/200x165/8996EF/FFFBF9">
+                </div>
+            </div>
+            <div class="ba-row clearfix">
+                <div class="ba-width-1-2">
+                    <img src="http://via.placeholder.com/300x150/FFC569/617767">
+                </div>
+                <div class="ba-width-1-2">
+                    <img src="http://via.placeholder.com/300x150/FFC569/617767">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="ba-row clearfix">
+        <div class="ba-width-1-3">
+            <img src="http://via.placeholder.com/400x185/588CC8/FFF6F2">
+        </div>
+        <div class="ba-width-1-3">
+            <img src="http://via.placeholder.com/400x185/588CC8/FFF6F2">
+        </div>
+        <div class="ba-width-1-6">
+            <img src="http://via.placeholder.com/200x195/588CC8/FFF6F2">
+        </div>
+        <div class="ba-width-1-6">
+            <img src="http://via.placeholder.com/200x195/588CC8/FFF6F25">
+        </div>
+    </div>
+
+    <div class="ba-row clearfix">
+        <div class="ba-width-1-6">
+            <a href="https://placeholder.com"><img src="http://via.placeholder.com/200x145/6653AE/FFF6F2"></a>
+        </div>
+        <div class="ba-width-1-2">
+            <a href="https://placeholder.com"><img src="http://via.placeholder.com/600x135/6653AE/FFF6F2"></a>
+        </div>
+        <div class="ba-width-1-3">
+            <a href="https://placeholder.com"><img src="http://via.placeholder.com/400x135/6653AE/FFF6F2"></a>
+        </div>
+    </div>
+
 </div>
 </body>
 </html>
