--- a/lesson15/index.html
+++ b/lesson15/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>paymentform</title>
+    <title>Image Grid</title>
     <link rel="icon" href="img/favicon.png" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css" />
@@ -10,55 +10,71 @@
 
 </head>
 <body>
-<div class="info">
-    <div class="logo">
-        <h1>Harold Finch</h1>
-        <p>Your Total</p>
+<div class="ba-container">
+    <h1>Image Grid</h1>
+    <div class="ba-row clearfix">
+        <div class="ba-width-1-2">
+            <img src="http://via.placeholder.com/600x150/AFDFBF/617767">
+        </div>
+        <div class="ba-width-1-2">
+            <img src="http://via.placeholder.com/600x150/68C5B8/617767">
+        </div>
     </div>
-    <div class="sum">    
-        <p>$88</p>
-    </div>
-</div>
-  
-    <content>
-    <div class="pay">
-                    <form>
-                      <fieldset>
-                             <label>
-                                 <p>Credit card number</p>
-                                 <input class="text" type='text' name='sum' value='4321' onfocus="this.value=' '"\/>
-                                 <p>Expiration date</p>
-                                 <select class="month" type='month' name='month' value='Month'>
-                            <option>Month</option>
-                            <option>01</option>
-                            <option>02</option>
-                            <option>03</option>
-                            <option>04</option>
-                            <option>05</option>
-                            <option>06</option>
-                            <option>07</option>
-                            <option>08</option>
-                            <option>09</option>
-                            <option>10</option>
-                            <option>11</option>
-                            <option>12</option>
-                        </select>
-                                 <select class="year" type='year' name='year' value='Year'>
-                            <option>Year</option>
-                            <option>2018</option>
-                            <option>2019</option>
-                            <option>2020</option>
-                            <option>2021</option>
-                            </select>
-                             </label>
-                            <p>CVV</p>
-                                <input class="cvv" type="password" maxlength="4" size="4" name="password"  max="4"><span>3 or 4 digits - <a href="#">view example</a></span>
-                            <hr>
-                                <button class="button">Pay</button>
-                               <h4><a href="#">Cancel order</a></h4>
-                       </fieldset>
-                    </form>
+
+    <div class="ba-row clearfix">
+        <div class="ba-width-1-2">
+            <img src="http://via.placeholder.com/600x320/FA6889/FFFBF9">
+        </div>
+        <div class="ba-width-1-2">
+            <div class="ba-row clearfix">
+                <div class="ba-width-1-3">
+                   <img src="http://via.placeholder.com/200x165/8996EF/FFFBF9">
                 </div>
-</content>  
+                <div class="ba-width-1-3">
+                    <img src="http://via.placeholder.com/200x165/8996EF/FFFBF9">
+                </div>
+                <div class="ba-width-1-3">
+                    <img src="http://via.placeholder.com/200x165/8996EF/FFFBF9">
+                </div>
+            </div>
+            <div class="ba-row clearfix">
+                <div class="ba-width-1-2">
+                    <img src="http://via.placeholder.com/300x150/FFC569/617767">
+                </div>
+                <div class="ba-width-1-2">
+                    <img src="http://via.placeholder.com/300x150/FFC569/617767">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="ba-row clearfix">
+        <div class="ba-width-1-3">
+            <img src="http://via.placeholder.com/400x185/588CC8/FFF6F2">
+        </div>
+        <div class="ba-width-1-3">
+            <img src="http://via.placeholder.com/400x185/588CC8/FFF6F2">
+        </div>
+        <div class="ba-width-1-6">
+            <img src="http://via.placeholder.com/200x195/588CC8/FFF6F2">
+        </div>
+        <div class="ba-width-1-6">
+            <img src="http://via.placeholder.com/200x195/588CC8/FFF6F25">
+        </div>
+    </div>
+
+    <div class="ba-row clearfix">
+        <div class="ba-width-1-6">
+            <a href="https://placeholder.com"><img src="http://via.placeholder.com/200x145/6653AE/FFF6F2"></a>
+        </div>
+        <div class="ba-width-1-2">
+            <a href="https://placeholder.com"><img src="http://via.placeholder.com/600x135/6653AE/FFF6F2"></a>
+        </div>
+        <div class="ba-width-1-3">
+            <a href="https://placeholder.com"><img src="http://via.placeholder.com/400x135/6653AE/FFF6F2"></a>
+        </div>
+    </div>
+
+</div>
 </body>
 </html>
