--- a/exam/index.html
+++ b/exam/index.html
@@ -5,8 +5,7 @@
     <title>Title</title>
     <link rel="icon" href="img/favicon.png" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:300,700,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
 </head>
@@ -14,93 +13,116 @@
 <section class="one">
     <div class="container">
         <div class="content">
-            <h1>Bhromaon</h1>
+            <h2>Bhromaon</h2>
             <p>Safe Travel Anywhere</p>
             <form>
-                <input class="text" type="text" placeholder="Search Your Travel Destination">
-                <input class="button" type="submit" name="submit" value="Search">
+                <div class="search">
+                    <input type="text" placeholder="Search Your Travel Destination">
+                    <button type="submit" name="submit">Search<img src="img/search.png" alt="search"></button>
+                 </div>
             </form>
         </div>
         <div class="scroll">
             <p>Scroll Down</p>
-            <a class="scroll" href="#about">
-                <img src="img/scroll.png" alt="scroll">
-            </a>
+            <a href="#about"><img src="img/scroll.png" alt="scroll"></a>
         </div>
-        <nav class="clearfix">
-            <h2><a href="#">Bhromaon</a></h2>
-            <ul>
-                <li><a href="#">Who We Are</a></li>
-                <li><a href="#">What We Do</a></li>
-                <li><a href="#">Travel With Us</a></li>
-                <li><a href="#">Contact Us</a></li>
-            </ul>
+
+        <nav class="menu">
+            <div class="container clearfix">
+                <h2><a href="#">Bhromaon</a></h2>
+                <ul>
+                    <li><a href="#">Who We Are</a></li>
+                    <li><a href="#">What We Do</a></li>
+                    <li><a href="#">Travel With Us</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </div>
         </nav>
+
     </div>
 </section>
 
 <section class="two">
     <div class="container clearfix">
         <div class="two_text">
-            <h2>Why Choose Us</h2>
+            <h3>Why Choose Us</h3>
             <p>Tion and dislike men who are so beguiled and demoralized by desire by the charms of pleasure of the
-                moment, so blinded by desire, that they cannot foresee Ddislike men who are so beguiled and demoralized
-                by the charms of pleasure of the moment, so blinded by desire, that.
-            </p>
-            <button>Book Now</button>
+                moment, so blinded by desire, that they cannot foresee</p>
+            <p>Ddislike men who are so beguiled and demoralized
+                by the charms of pleasure of the moment, so blinded by desire, that.</p>
+            <button>Explore Places</button>
         </div>
         <div class="two_img">
-            <img src="img/two_1.png" alt="" />
-            <img src="img/two_2.png" alt="" />
+            <div class="im_one"><img src="img/two_1.png" alt="" /></div>
+            <div class="im_two"><img src="img/two_2.png" alt="" /></div>
         </div>
-        <div class="two_icon">
-            <ul>
-                <li><a href="#"><i class="fab fa-facebook-f"></i>Search Places</a></li>
-                <li><a href="#"><i class="fab fa-twitter"></i>Select Places</a></li>
-                <li><a href="#"><i class="fab fa-linkedin"></i>Book & Enjoy</a></li>
-            </ul>
+
+
+    </div>
+    <div class="two_icon">
+        <div class="container">
+            <img src="img/wave.png" alt="wave">
+                <div class="nav_icon">
+                    <ul>
+                        <li><a href="#"><img src="img/search_icon.png" alt="search">Search Places</a></li>
+                        <li><a href="#"><img src="img/done_icon.png" alt="done">Select Places</a></li>
+                        <li><a href="#"><img src="img/good_icon.png" alt="good">Book & Enjoy</a></li>
+                    </ul>
+                </div>
         </div>
     </div>
-
 </section>
 
 <section class="three">
-    <div class="container">
-        <h3>Grand Spain Madrid</h3>
-        <h2>Grand Spain Madrid</h2>
-        <p>But I must explain to you how all this mistaken idea of account to denouncing pleasure and praising
-            pain was account  born and I account will give you a complete account of the system
-        </p>
+        <div class="list_one">
+            <div class="container">
+                <div class="hotel">
+                    <h3>Spain</h3>
+                    <h2>Grand Spain Madrid</h2>
+                    <p>But I must explain to you how all this mistaken idea of account to denouncing pleasure and praising
+                        pain was account  born and I account will give you a complete account of the system
+                    </p>
+                    <button>Book Now</button>
+                </div>
+            </div>
+        </div>
+        <div class="list_two">
+            <div class="container clearfix">
+                <div class="hotel">
+                    <h3>Spain</h3>
+                    <h2>Grand Spain Madrid</h2>
+                    <p>But I must explain to you how all this mistaken idea of account to denouncing pleasure and praising
+                        pain was account  born and I account will give you a complete account of the system
+                    </p>
+                    <button>Book Now</button>
+                </div>
+            </div>
+        </div>
 
-        <button>Book Now</button>
-    </div>
 </section>
+
 
 <section class="four">
     <div class="container">
-        <h3>Grand Spain Madrid</h3>
-        <h2>Grand Spain Madrid</h2>
-        <p>But I must explain to you how all this mistaken idea of account to denouncing pleasure and praising
-            pain was account  born and I account will give you a complete account of the system
-        </p>
 
-        <button>Book Now</button>
-    </div>
-</section>
+        <h4>What Our  Tourist Say</h4>
+            <div class="four_content clearfix">
+                <div class="four_img">
+                    <img src="img/four_man.png" alt="view"/>
+                </div>
+                <div class="four_text">
+                    <h3>Sam Sumon</h3>
+                    <p><i class="fas fa-quote-left"></i> But I must explain to you how all this mistaken idea of account to denouncinpleasure and praising pain
+                        But I must explain to you how all this mistaken idea of account to nai denouncing pleasure and praising
+                        pain was account  born and I account will give you a complete account of the system was account  born and
+                        I account will give you a nai the complete account of the system</p>
+                </div>
+            </div>
 
-<section class="five">
-    <div class="container clearfix">
-          <h3>What Our  Tourist Say</h3>
-            <div class="five_img">
-                <img src="img/five_man.png" alt="" />
-            </div>
-            <div class="five_text">
-                <h3>Sam Sumon</h3>
-                <p>But I must explain to you how all this mistaken idea of account to denouncinpleasure and praising pain
-                    But I must explain to you how all this mistaken idea of account to nai denouncing pleasure and praising
-                    pain was account  born and I account will give you a complete account of the system was account  born and
-                    I account will give you a nai the complete account of the system</p>
-            </div>
+
+
+
+
     </div>
 </section>
 
@@ -109,14 +131,13 @@
 
             <h3>Bhromaon</h3>
             <p>Safe Travel Anywhere</p>
-
-            <ul>
-                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-                <li><a href="#"><i class="fab fa-youtube-square"></i></a></li>
-                <li><a href="#"><i class="fab fa-pinterest"></i></a></li>
-            </ul>
+            <div class="sn">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-linkedin"></i></a>
+                <a href="#"><i class="fab fa-youtube-square"></i></a>
+                <a href="#"><i class="fab fa-pinterest"></i></a>
+            </div>
 
 
     </div>
